# Server-Info-Manager

./: .gitignore  CMakeLists.txt  README.md
include/: ServerInfo.h  ServerManager.h  UIManager.h
src/: ServerManager.cpp  UIManager.cpp  main.cpp  mian.cpp
